Fix spacing around searchDocs

--- a/css/outer/docs/docs.less
+++ b/css/outer/docs/docs.less
@@ -65,6 +65,10 @@
   }
 
   #searchDocs {
+    ul {
+      margin: 0;
+    }
+
     input[type=text] {
       width: 86%;
     }
